--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li {
+list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+/* a:hover {
+  color: rgb(136, 75, 75);
+  text-decoration: double;
+} */
+.container {
+  width: 1200px;
+  margin: 0 auto; 
+}
+img {
+  display: block;
+}
+button {
+  border: none;
 }
